--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-junit-jupiter = "5.9.0"
+junit-jupiter = "5.10.2"
 jvm = "17"
-kotlin = "2.0.0-Beta1"
-ktor = "2.3.6"
-logback = "1.4.11"
+kotlin = "2.1.0"
+ktor = "3.0.1"
+logback = "1.5.12"
 
 [bundles]
 
